1.17 — Fixed .gallery-caption color when in dark mode

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 	Theme Name: Hamilton
     Text Domain: hamilton
-	Version: 1.16
+	Version: 1.17
 	Description: Hamilton is a clean WordPress portfolio theme for creatives. It displays posts in a beautiful image grid that can be set to either two or three columns, which makes it a perfect fit for photographers, illustrators or graphic designers looking for a theme for their portfolio. It also features a dark mode, custom background color support, a resume page template, responsive design, Jetpack infinite scroll support, editor styling, and much more. Demo: http://andersnoren.se/themes/hamilton/
 	Tags: blog, two-columns, three-columns, custom-menu, featured-images, threaded-comments, translation-ready, grid-layout, custom-background, custom-logo, editor-style, sticky-post, theme-options, portfolio, photography
 	Author: Anders Norén
@@ -1288,6 +1288,11 @@ blockquote cite:before {
 	position: absolute;
 		bottom: 10px;
 		left: 20px;	
+}
+
+.dark-mode .gallery-caption {
+	background: #1d1d1d;
+	color: #fff;
 }
 
 .gallery-columns-1 .gallery-caption,
